src/assets/css/info-style.css
.info {
    color: var(--main-color);
    background-color: var(--main-bg-color);
    min-height: 60vh;
    max-height: 60vh;
    overflow-y: auto;
    overflow-x: auto;
}

    .info h1, h2, h3, h4, h5, h6 {
        text-align: center;
        color: azure;
    }

    .info ul {
        list-style: none;
        padding: 0px;
        color: var(--main-color);
    }

.info-spells-selected {
    color: var(--main-color);
    background-color: var(--main-bg-color);
    border: 1px solid azure;
    list-style: none;
    padding: 0px;
}

    .info-spells-selected li {
        color: var(--main-color);
        background-color: var(--main-bg-color);
        border: 1px solid azure;
    }


.info-proficiencies-title {
    color: var(--main-color);
    background-color: var(--main-bg-color);
    border-top: 1px solid azure;
    border-left: 1px solid azure;
    border-right: 1px solid azure;
    margin: 0px;
    width: 100%;
    padding: 0px;
    float: left;
}

.info-proficiencies-selected {
    color: var(--main-color);
    background-color: var(--main-bg-color);
    border-bottom: 1px solid azure;
    border-left: 1px solid azure;
    border-right: 1px solid azure;
    list-style: none;
    padding: 0px;
    margin: 0px;
    width: 100%;
    font-size: 12px;
    float: left;
}

    .info-proficiencies-selected li {
        float: left;
        margin: 0px;
        padding: 0px;
    }

.info-abilityBonuses {
    font-size: 10px;
    margin: 0px;
    padding: 0px;
}

    .info-abilityBonuses li {
        float: left;
        margin: 0px;
        padding: 0px;
    }

/*.info ul li {    
    color: azure;
    float: left;
    border-radius: 1px;
    font-size: 12px;
    margin: 0px;
    padding: 3px 0px;
}*/

.info-col-left {
    color: var(--main-color);
    background-color: black;
    color: azure;
    margin: 0px;
    padding: 0px;
    border: 1px solid azure;
}

.info-col-right {
    color: var(--main-color);
    background-color: black;
    color: azure;
    margin: 0px;
    padding: 0px;
    border: 1px solid azure;
}

